# marc8-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
marc8/: Cargo.toml
marc8-cli/: Cargo.toml
marc8-cli/src/: main.rs
marc8/src/: charsets.rs  error.rs  lib.rs
py-marc8/: Cargo.toml  pyproject.toml
py-marc8/src/: lib.rs
src/: charsets.rs  constants.rs  error.rs  lib.rs  main.rs  mappings.rs  python.rs
