[package]
name = "marc8"
version = "0.1.0"
edition = "2021"

[lib]
name = "marc8"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["abi3-py38"], optional = true }
unicode-normalization = "0.1.24"
 
[features]
python = ["dep:pyo3"]

[dev-dependencies]
pyo3 = "0.23.2"

